--- a/functions/package.json
+++ b/functions/package.json
@@ -9,14 +9,11 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "@google-cloud/storage": "^2.3.4",
-    "child-process-promise": "^2.2.1",
-    "firebase-admin": "~6.0.0",
+    "@google-cloud/storage": "^0.4.0",
+    "child-process-promise": "^2.2.0",
+    "firebase-admin": "~6.4.0",
     "firebase-functions": "^2.1.0",
-    "fs": "^0.0.1-security",
-    "mkdirp-promise": "^5.0.1",
-    "os": "^0.1.1",
-    "path": "^0.12.7"
+    "mkdirp-promise": "^5.0.1"
   },
   "private": true
 }
