--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.7.2",
+    "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-firebase-file-uploader": "^2.4.2",
+    "react-firebaseui": "^3.1.2",
     "react-scripts": "2.1.2"
   },
   "devDependencies": {
