--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.7.0",
     "react-firebase-file-uploader": "^2.4.2",
     "react-firebaseui": "^3.1.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "react-scripts build && ./node_modules/.bin/firebase deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
