--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-firebase-file-uploader": "^2.4.2",
     "react-firebaseui": "^3.1.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.2"
+    "react-scripts": "2.1.2",
+    "typeface-roboto-mono": "^0.0.54"
   },
   "devDependencies": {
+    "firebase-admin": "^6.4.0",
     "firebase-tools": "^6.2.2",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3"
